# Gentainer

./: .gitignore  config.toml  main.py  networks.toml  pyproject.toml  readme.md  setup.py
config/: dnscrypt.toml  firefox.toml  gentoo_base.toml  gentoo_tini.toml
gentainer/: __init__.py  builder.py  container_config.py  gentainer.py  layers.py  nets.py  users.py  zen_custom.py
src/gentainer/: __init__.py  builder.py  container_config.py  gentainer.py  main.py  nets.py  users.py
