[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gentainer"
version = "0.0.1"
authors = [
  { name="Desultory", email="dev@pyl.onl" },
]
description = "Gentoo based LXC container maker"
readme = "readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

dependencies = [
    "zenlib >= 2.4.1",
    "portage >= 3.0.52"
]

[project.scripts]
gentainer = "gentainer.main:main"

[project.urls]
Homepage = "https://github.com/desultory/gentainer"
Issues = "https://github.com/desultory/gentainer/issues"
